--- a/statNewCo-rpubs.html
+++ b/statNewCo-rpubs.html
@@ -844,11 +844,9 @@ head(NRCdata)
 <div class="slideContent" >
 <p>Documentation : Documenation for usage is available on app</p>
 
-<p>App: </p>
+<p>App: <a href="https://urveshdevani.shinyapps.io/statsNewCompany">https://urveshdevani.shinyapps.io/statsNewCompany</a></p>
 
-<p>Github Repo:</p>
-
-<p>Slidify Presentation:</p>
+<p>Github Repo: <a href="https://github.com/urveshdev/StatNewCos">https://github.com/urveshdev/StatNewCos</a> </p>
 
 </div>
 
@@ -908,7 +906,7 @@ function commandsForSlide(indexh) {
       transitionSpeed: 'default',
       rtl: false,
       width: 1440,
-      height: 900,
+      height: 1050,
     
       dependencies: []
     });
